--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       
-           <img src="images/logo.png"  alt="panthera logo"  title="logo"/>  
+           <img src="images/logo.png"  alt="panthera logo" />  
    
           <nav id="menu">
                 <a href="index.html">Home</a>
