--- a/public_html/games.html
+++ b/public_html/games.html
@@ -16,6 +16,7 @@
                 <a href="dvds_and_series.html">Dvds and series</a>
                 <a href="games.html">Games</a>
                 <a href="devices.html">Devices</a>
+                <a href="contact_us.html">Contact us</a>
             </nav>
             <div class="header">
             <h1>PC Games</h1>
