--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,8 +4,9 @@
         <title>Panthera</title>
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet"/>
-    </head>
-    <body>
+ 
+    </head> 
+    <body >
       
            <img src="images/logo.png"  alt="panthera logo" />  
    
@@ -15,12 +16,13 @@
                 <a href="dvds_and_series.html">Dvds and series</a>
                 <a href="games.html">Games</a>
                 <a href="devices.html">Devices</a>
+                <a href="contact_us.html">Contact us</a>
             </nav>
-           <div id="pic">
+           <div id="pic" >
 
                </div>
            <div id="h1">
-              <h1> Welcome to PANTHERA</h1>
+              <h1 onmouseover="this.style.color = 'black'" onmouseout="this.style.color = 'red'"> Welcome to PANTHERA</h1>
               </div>
          <p id="footer">&copy; 2015. All Right Reserved By Jina Zeine </p>
     </body>
