--- a/public_html/devices.html
+++ b/public_html/devices.html
@@ -15,6 +15,7 @@
                 <a href="dvds_and_series.html">Dvds and series</a>
                 <a href="games.html">Games</a>
                 <a href="devices.html">Devices</a>
+                 <a href="contact_us.html">Contact us</a>
             </nav>
 
             <div class="d">            
