--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,9 +4,10 @@
         <title>Panthera</title>
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet"/>
- 
+        <script src="script.js"></script>
+        <script src="jquery-2.1.3.js"></script>
     </head> 
-    <body >
+    <body onload="changePic()">
       
            <img src="images/logo.png"  alt="panthera logo" />  
    
@@ -25,5 +26,6 @@
               <h1 onmouseover="this.style.color = 'black'" onmouseout="this.style.color = 'red'"> Welcome to PANTHERA</h1>
               </div>
          <p id="footer">&copy; 2015. All Right Reserved By Jina Zeine </p>
+          <br>Click <a href="#" target="_top">here</a> to go to top
     </body>
 </html>
