--- a/public_html/contact_us.html
+++ b/public_html/contact_us.html
@@ -5,8 +5,8 @@
         <title>Contact us</title>
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet"/>
-                <script src="script.js">
-        </script>
+        <script src="script.js"></script>
+        <script src="jquery-2.1.3.js"></script>
     </head>
     <body>
         <img src="images/logo.png"  alt="panthera logo"/>  
@@ -77,4 +77,6 @@
                 <input type="text" id="myEmail" placeholder="email"  onkeyup="changeBGcolor(this)"/>
                  <input type="button" value="ok"   onclick="getmail()"/>  
             </p>
+             <br>Click <a href="#" target="_top">here</a> to go to top
+    </body>
 </html>
