--- a/public_html/devices.html
+++ b/public_html/devices.html
@@ -5,6 +5,8 @@
         <title>Devices</title>
         <meta charset="UTF-8">
         <link href="style.css" rel="stylesheet"/>
+        <script src="script.js"></script>
+         <script src="jquery-2.1.3.js"></script>
     </head>
     <body>
             <img src="images/logo.png"  alt="panthera logo"/>  
@@ -85,5 +87,6 @@
                      <a href="devices/usb2.jpg" class="p"><img src="devices/usb2.jpg" alt="usb2"/></a>
                      <a href="devices/usb3.jpg" class="p"><img src="devices/usb3.jpg" alt="usb3"/></a>
               </div>
+             <br>Click <a href="#" target="_top">here</a> to go to top
     </body>
 </html>
