--- a/public_html/devices.html
+++ b/public_html/devices.html
@@ -49,10 +49,12 @@
                 <div class="d">
                     <h2>Controllers</h2>
                     <h3>Original PS4 controller for 80$ different colors are available </h3>
-                    
-                     <a href="devices/con4.jpg" class="p"><img src="devices/con4.jpg" alt="con4"/></a>
-                     <a href="devices/con2.jpg" class="p"><img src="devices/con2.jpg" alt="con2"/></a>
-                     <a href="devices/con3.jpg" class="p"><img src="devices/con3.jpg" alt="con3"/></a>
+                     <p><img src="devices/conblack.jpg" alt="webimage"  /></p>
+           <label><input name="webradios" id="conblack"  type="radio" checked onchange="document.images[4].src='devices/conblack.jpg'"/>black</label>
+           <label><input name="webradios" id="conblue" type="radio" onchange="document.images[4].src='devices/conblue.jpg'"/>blue</label>
+           <label><input name="webradios" id="congray"    type="radio"   onchange="document.images[4].src='devices/congray.jpg'"/>gray</label>
+           <label><input name="webradios" id="conred"    type="radio"   onchange="document.images[4].src='devices/conred.jpg'"/>red</label>
+             
                      <h3>original Xbox 360 controller for 60$ </h3>
                       <a href="devices/con5.jpg" class="p"><img src="devices/con5.jpg" alt="con5"/></a>
             </div>
