--- a/public_html/devices.html
+++ b/public_html/devices.html
@@ -73,9 +73,11 @@
                      <div class="d">
                     <h2>head phones</h2>
                     <h3> Are available with different shapes , colors and different brands </h3>
-                     <a href="devices/h1.jpg" class="p"><img src="devices/h1.jpg" alt="h1"/></a>
-                     <a href="devices/h2.jpg" class="p"><img src="devices/h2.jpg" alt="h2"/></a>
-                     <a href="devices/h3.jpg" class="p"><img src="devices/h3.jpg" alt="h3"/></a>
+                    <p><img src="devices/h1.jpg" alt="webimage"  /></p>
+           <label><input name="webradios" id="h1"  type="radio" checked onchange="document.images[9].src='devices/h1.jpg'"/>beats</label>
+           <label><input name="webradios" id="h2" type="radio" onchange="document.images[9].src='devices/h2.jpg'"/>intex</label>
+           <label><input name="webradios" id="h3"    type="radio"   onchange="document.images[9].src='devices/h3.jpg'"/>intex 2</label>
+           <label><input name="webradios" id="h4"    type="radio"   onchange="document.images[9].src='devices/h4.jpeg'"/>wirless</label>
                   
               </div>
             <br>
