--- a/public_html/dvds_and_series.html
+++ b/public_html/dvds_and_series.html
@@ -113,8 +113,8 @@
             <option>Sed el bouchrieh</option>
             </select><br><br> </li>
            
-          <li>chose a way that you want to contact us<br><br>
-                <ul><li> by phone <p>click <a href="contact_us.html">here</a> to get our phone numbers </p></li>
+          <li>chose a way to contact us<br><br>
+                <ul><li> by phone: <p>click <a href="contact_us.html">here</a> to get our phone numbers </p></li>
                     <li>by email: you have to insert the following information in your email then send it to pantheradvd@gmail.com  <form id="myForm" onsubmit="getInfo()">
                                   <p>First name:
                                   <input type="text" name="fname" onfocus="this.style.borderColor='red'" onblur="this.style.borderColor=''"/></p>
