--- a/public_html/index.html
+++ b/public_html/index.html
@@ -7,7 +7,7 @@
         <script src="script.js"></script>
         <script src="jquery-2.1.3.js"></script>
     </head> 
-    <body onload="changePic()">
+    <body>
       
            <img src="images/logo.png"  alt="panthera logo" />  
    
@@ -19,7 +19,7 @@
                 <a href="devices.html">Devices</a>
                 <a href="contact_us.html">Contact us</a>
             </nav>
-           <div id="pic" >
+           <div id="pic" style=" background-image: url('images/jeita.jpg');">
 
                </div>
            <div id="h1">
