--- a/public_html/devices.html
+++ b/public_html/devices.html
@@ -24,7 +24,7 @@
                 <h2>
                Gaming devices:
             </h2> 
-                <ul id="list">
+                <ul id="list" onmouseover="this.style.color = 'blue'" onmouseout="this.style.color = 'black'">
                     <li><a href="#">PS4</a>
                         <ol>
           <li>first offer:<br><p> 1TB with 2 controllers ,2 games, and 1 year  international "sony" warranty only for 555$ </p></li>
@@ -48,19 +48,19 @@
             <br>
                 <div class="d">
                     <h2>Controllers</h2>
-                    <h3>Original PS4 controller for 80$ different colors are available </h3>
+                    <h3 onmouseover="$(this).css('color','red')">Original PS4 controller for 80$ different colors are available </h3>
                      <p><img src="devices/conblack.jpg" alt="webimage"  /></p>
            <label><input name="webradios" id="conblack"  type="radio" checked onchange="document.images[4].src='devices/conblack.jpg'"/>black</label>
            <label><input name="webradios" id="conblue" type="radio" onchange="document.images[4].src='devices/conblue.jpg'"/>blue</label>
            <label><input name="webradios" id="congray"    type="radio"   onchange="document.images[4].src='devices/congray.jpg'"/>gray</label>
            <label><input name="webradios" id="conred"    type="radio"   onchange="document.images[4].src='devices/conred.jpg'"/>red</label>
              
-                     <h3>original Xbox 360 controller for 60$ </h3>
+                     <h3 onmouseover="$(this).css('color','red')">original Xbox 360 controller for 60$ </h3>
                       <a href="devices/con5.jpg" class="p"><img src="devices/con5.jpg" alt="con5"/></a>
             </div>
             <br>
             <br>
-              <div class="d">
+              <div class="d" >
                     <h2>Bluetooth speakers</h2>
                     <h3> Are available with different shapes and colors</h3>
                      <a href="devices/bl4.jpg" class="p"><img src="devices/bl4.jpg" alt="bl4"/></a>
